Add ManufacturingPmiParticulars
